[package]
name = "inexor-rgf-plugin-git"
description = "Inexor - Reactive Graph Flow - Plugin - GIT"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../../README.md"

[package.metadata.deb]
name = "libinexor-rgf-plugin-git"
depends = "inexor-rgf, libinexor-rgf-plugin-base, libinexor-rgf-plugin-file, libinexor-rgf-plugin-http, libinexor-rgf-plugin-trigger"
assets = [
    ["target/release/libinexor_rgf_plugin_git.so", "usr/share/inexor-rgf/default/plugins/installed/libinexor_rgf_plugin_git.so", "755"],
]

[dependencies]
async-trait = { workspace = true }
dashmap = { workspace = true }
git2 = { workspace = true }
http = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
log4rs = { workspace = true, features = ["console_appender", "file_appender", "toml_format"] }
rust-embed = { workspace = true, features = ["debug-embed", "compression"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
springtime-di = { workspace = true, default-features = false, features = ["threadsafe", "derive"] }
uuid = { workspace = true, features = ["serde", "v4"] }

inexor-rgf-behaviour-model-api = { workspace = true }
inexor-rgf-behaviour-model-impl = { workspace = true }
inexor-rgf-graph = { workspace = true }
inexor-rgf-plugin-api = { workspace = true }
inexor-rgf-reactive-model-api = { workspace = true }
inexor-rgf-reactive-model-impl = { workspace = true }
inexor-rgf-reactive-service-api = { workspace = true, features = ["derive"] }
inexor-rgf-runtime-model = { workspace = true }
inexor-rgf-type-system-api = { workspace = true }

inexor-rgf-model-base = { version = "0.10.0", path = "../../../base/crates/model" }
inexor-rgf-model-file = { version = "0.10.0", path = "../../../file/crates/model" }
inexor-rgf-model-git = { version = "0.10.0", path = "../../crates/model" }
inexor-rgf-model-http = { version = "0.10.0", path = "../../../http/crates/model" }

[dev-dependencies]
default-test = { workspace = true }
inexor-rgf-graph = { workspace = true, features = ["test"] }
inexor-rgf-test-utils = { workspace = true }

[target.'cfg(target = "armv7-unknown-linux-gnueabihf")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target = "aarch64-unknown-linux-gnu")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[lib]
# Plugins use crate-type cdylib
# https://doc.rust-lang.org/reference/linkage.html
# https://users.rust-lang.org/t/what-is-the-difference-between-dylib-and-cdylib/28847/3
crate-type = ["cdylib"]

[package.metadata.cargo-post.dependencies]
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
glob = "0.3"
