[package]
name = "reactive-graph-plugin-git"
description = "Reactive Graph - Plugin - GIT"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../../../README.md"

[package.metadata.deb]
name = "libreactive-graph-plugin-git"
depends = "reactive-graph, libreactive-graph-plugin-base, libreactive-graph-plugin-file, libreactive-graph-plugin-http, libreactive-graph-plugin-trigger"
assets = [
    ["target/release/libreactive_graph_plugin_git.so", "usr/share/reactive-graph/default/plugins/installed/libreactive_graph_plugin_git.so", "755"],
]

[dependencies]
async-trait = { workspace = true }
#git2 = { workspace = true }
#http = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
log4rs = { workspace = true, features = ["console_appender", "file_appender", "toml_format"] }
rust-embed = { workspace = true, features = ["debug-embed", "compression"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
springtime-di = { workspace = true, default-features = false, features = ["threadsafe", "derive"] }
uuid = { workspace = true, features = ["serde", "v4"] }

reactive-graph-behaviour-model-api = { workspace = true }
reactive-graph-behaviour-model-impl = { workspace = true }
reactive-graph-graph = { workspace = true }
reactive-graph-plugin-api = { workspace = true }
reactive-graph-reactive-model-api = { workspace = true }
reactive-graph-reactive-model-impl = { workspace = true }
reactive-graph-runtime-model = { workspace = true }
reactive-graph-type-system-api = { workspace = true }

reactive-graph-model-file = { version = "0.10.0", path = "../../../file/crates/model" }
reactive-graph-model-git = { version = "0.10.0", path = "../../crates/model" }
reactive-graph-model-http = { version = "0.10.0", path = "../../../http/crates/model" }

[dev-dependencies]
reactive-graph-graph = { workspace = true, features = ["test"] }

[target.'cfg(target = "armv7-unknown-linux-gnueabihf")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target = "aarch64-unknown-linux-gnu")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[lib]
# Plugins use crate-type cdylib
# https://doc.rust-lang.org/reference/linkage.html
# https://users.rust-lang.org/t/what-is-the-difference-between-dylib-and-cdylib/28847/3
crate-type = ["cdylib"]

[package.metadata.cargo-post.dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
glob = "0.3"
