[package]
name = "inexor-rgf-model-http"
description = "Inexor - Reactive Graph Flow - Model - HTTP"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
indradb-lib = { workspace = true }
lazy_static = { workspace = true }
paste = { workspace = true }
serde_json = { workspace = true }
strum_macros = { workspace = true }
url = { workspace = true }

inexor-rgf-core-model = { workspace = true }
inexor-rgf-model-result = { path = "../../../result/crates/model" }
inexor-rgf-model-trigger = { path = "../../../trigger/crates/model" }

[lib]
crate-type = ["lib"]
