[package]
name = "reactive-graph-model-http"
description = "Reactive Graph - Model - HTTP"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../../README.md"

[dependencies]
lazy_static = { workspace = true }
paste = { workspace = true }
serde_json = { workspace = true }
strum_macros = { workspace = true }
url = { workspace = true }

reactive-graph-behaviour-model-api = { workspace = true }
reactive-graph-graph = { workspace = true }
reactive-graph-reactive-model-api = { workspace = true }
reactive-graph-reactive-model-impl = { workspace = true }
reactive-graph-runtime-model = { workspace = true }

reactive-graph-model-result = { version = "0.10.0", path = "../../../result/crates/model" }

[lib]
crate-type = ["lib"]
