[package]
name = "inexor-rgf-plugin-http"
description = "Inexor - Reactive Graph Flow - Plugin - HTTP"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../../README.md"

[package.metadata.deb]
name = "libinexor-rgf-plugin-http"
depends = "inexor-rgf, libinexor-rgf-plugin-base, libinexor-rgf-plugin-result, libinexor-rgf-plugin-trigger"
assets = [
    ["target/release/libinexor_rgf_plugin_http.so", "usr/share/inexor-rgf/default/plugins/installed/libinexor_rgf_plugin_http.so", "755"],
]

[dependencies]
async-trait = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
log4rs = { workspace = true, features = ["console_appender", "file_appender", "toml_format"]}
rust-embed = { workspace = true, features = ["debug-embed", "compression"] }
serde_json = { workspace = true }
springtime-di = { workspace = true, default-features = false, features = [ "threadsafe", "derive" ] }
ureq = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

inexor-rgf-graph = { workspace = true }
inexor-rgf-behaviour = { workspace = true }
inexor-rgf-behaviour-api = { workspace = true }
inexor-rgf-reactive = { workspace = true }
inexor-rgf-reactive-api = { workspace = true }
inexor-rgf-plugin-api = { workspace = true, features = [ "json5", "toml" ] }
inexor-rgf-model-runtime = { workspace = true }
inexor-rgf-model-http = { version = "0.10.0", path = "../../crates/model" }
inexor-rgf-model-result = { version = "0.10.0", path = "../../../result/crates/model" }

[dev-dependencies]
default-test = { workspace = true }
inexor-rgf-graph = { workspace = true, features = ["test"] }
inexor-rgf-test-utils = { workspace = true }

[lib]
# Plugins use crate-type cdylib
# https://doc.rust-lang.org/reference/linkage.html
# https://users.rust-lang.org/t/what-is-the-difference-between-dylib-and-cdylib/28847/3
crate-type = ["cdylib"]

[package.metadata.cargo-post.dependencies]
toml = "0.7"
serde = { version = "1.0", features = [ "derive" ] }
glob = "0.3"
